# aula_9_bootcamp_python

./: etl.py  exemplo00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
